# rattler-build-demo

./: .gitignore  Makefile  environment.yml  pyproject.toml
conda.recipe/: recipe.yaml
